--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <!--HTML -->
 <h1>Mark</h1>
+
+<!--HTML 2-->
+<body>
+    <p>"Life is very short and what we have to do must be done in the now." - Audre Lorde</p>
+</body>
