--- a/index.html
+++ b/index.html
@@ -5,3 +5,8 @@
 <body>
     <p>"Life is very short and what we have to do must be done in the now." - Audre Lorde</p>
 </body>
+
+<!--HTML 3-->
+<p>This paragraph is a child of the div element and a grandchild of the body element</p>
+
+
