--- a/index.html
+++ b/index.html
@@ -9,4 +9,9 @@
 <!--HTML 3-->
 <p>This paragraph is a child of the div element and a grandchild of the body element</p>
 
+<!--HTML 4-->
+<h3>Countries with Large Brown Bear Populations</h3>
+    <h3>Countries with small Brown Bear Populations</h3>
+<h2>Media</h2>
+
 
