--- a/index.html
+++ b/index.html
@@ -14,4 +14,11 @@
     <h3>Countries with small Brown Bear Populations</h3>
 <h2>Media</h2>
 
+<!--HTML 5/6-->
+<div id="Introduction">
+    </div>
+   <div id="habitat">
+   </div>
+    <div id="media">
+    </div>
 
