--- a/index.html
+++ b/index.html
@@ -26,3 +26,7 @@
 <p>"The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently Least Concern. There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear."</p>
 <p>"Brown bears are not always completely brown. Some can be reddish or yellowish. They have very large, curved claws and huge paws. Male brown bears are often 30% larger than female brown bears. They can range from 5 feet to 9 feet from head to toe. "</p>
 <p>"Some countries with smaller brown bear populations include Armenia, Belarus, Bulgaria, China, Finland, France, Greece, India, Japan, Nepal, Poland, Romania, Slovenia, Turkmenistan, and Uzbekistan."</p>
+
+<!--HTML  8-->
+<em>Ursus arctos</em>
+<strong>Least Concern</strong>
