--- a/index.html
+++ b/index.html
@@ -44,3 +44,5 @@
     <li>United States</li>
     <li>Canada</li>
 </ol>
+<!--HTML 12-->
+<img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" />
