--- a/index.html
+++ b/index.html
@@ -46,3 +46,6 @@
 </ol>
 <!--HTML 12-->
 <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" />
+
+<!--HTML 13-->
+<img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" alt="A Brown Bear"/>
