--- a/index.html
+++ b/index.html
@@ -49,3 +49,8 @@
 
 <!--HTML 13-->
 <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" alt="A Brown Bear"/>
+ 
+<!--HTML 14-->
+<video src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" width="320" height="240" controls>
+    Video not supported
+</video> 
