--- a/index.html
+++ b/index.html
@@ -71,4 +71,7 @@
 <!--HTML 18-->
 <title>"Brown Bears"</title>
 
+<!--HTML 19/20-->
+<a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">Learn More</a>
+
 
