--- a/index.html
+++ b/index.html
@@ -74,4 +74,10 @@
 <!--HTML 19/20-->
 <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">Learn More</a>
 
+<!--HTML 21-->
+<a href="./index.html">Brown Bear</a>
+    <a href="./aboutme.html">About Me</a>
+
+
+
 
