--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 <a href="./index.html">Brown Bear</a>
     <a href="./aboutme.html">About Me</a>
 
+<!--HTML 22-->
+<a href="https://en.wikipedia.org/wiki/Brown_bear"><img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" /></a>
+
 
 
 
