--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 <!--HTML 22-->
 <a href="https://en.wikipedia.org/wiki/Brown_bear"><img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" /></a>
 
-
+<!--HTML 23-->
+<ul>
+    <li><a href="#introduction">Introduction</a></li>
+    <li><a href="#habitat">Habitat</a></li>
+    <li><a href="#media">Media</a></li>
+</ul>
 
 
