--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <li><a href="#media">Media</a></li>
 </ul>
 
-<!--HTML Fashion Blog Project-->
+<!--HTML 24 Fashion Blog Project-->
 <!DOCTYPE html> 
 <html>
   <head>
@@ -139,5 +139,11 @@
     </div>
   </body>
 </html>
+
+<!--HTML 25-->
+<table>
+
+</table>
+
 
 
