--- a/index.html
+++ b/index.html
@@ -155,3 +155,8 @@
 <td>Adam's Greenworks</td>
 <td>14</td>
 <td>Package Items</td>
+
+<!--HTML 28-->
+<th>Company Name</th>
+<th>Number of Items to Ship</th>
+<th>Next Action</th>
