--- a/index.html
+++ b/index.html
@@ -160,3 +160,30 @@
 <th>Company Name</th>
 <th>Number of Items to Ship</th>
 <th>Next Action</th>
+
+<!--HTML 29-->
+<tr>
+    <td>Davie's Burgers</td>
+    <td>2</td>
+    <td>Send Invoice</td>
+</tr>
+<tr>
+    <td>Baker's Bike Shop</td>
+    <td>3</td>
+    <td>Send Invoice</td>
+</tr>
+<tr>
+    <td>Miss Sally's Southern</td>
+    <td>4</td>
+     <td>Ship</td>
+</tr>
+<tr>
+    <td>Summit Resort Rentals</td>
+    <td>4</td>
+    <td>Ship</td>
+</tr>
+<tr>
+    <td>Strike Fitness</td>
+    <td>1</td>
+    <td>Enter Order</td>
+</tr>
