--- a/index.html
+++ b/index.html
@@ -193,3 +193,32 @@
 
 <!--HTML 31-->
 <td rowspan="2">Send Invoice</td>
+
+<!--HTML 32-->
+<tbody>
+  <tr>
+    <td>Adam's Greenworks</td>
+    <td>14</td>
+    <td>Package Items</td>
+  </tr>
+  <tr>
+    <td>Davie's Burgers</td>
+    <td>2</td>
+    <td rowspan="2">Send Invoice</td>
+  </tr>
+  <tr>
+    <td>Baker's Bike Shop</td>
+    <td>3</td>
+    <td>Send Invoice</td>
+  </tr>
+  <tr>
+    <td>Miss Sally's Southern</td>
+    <td>4</td>
+    <td>Ship</td>
+  </tr>
+  <tr>
+    <td>Summit Resort Rentals</td>
+    <td>4</td>
+    <td>Ship</td>
+  </tr>
+</tbody>
