--- a/index.html
+++ b/index.html
@@ -222,3 +222,12 @@
     <td>Ship</td>
   </tr>
 </tbody>
+
+<!--HTML 33-->
+<thead>
+  <tr>
+    <th>Company Name</th>
+    <th>Number of Items to Ship</th>
+    <th>Next Action</th>
+  </tr>
+</thead>
