--- a/index.html
+++ b/index.html
@@ -326,4 +326,11 @@
 <!--CSS 1 HTML-->
 <p style="font-family:Arial"></p>
 
+<!--CSS-2 HTML-->
+<style>
+  p{
+    font-family: Arial;
+  }
+</style>
+
 
