--- a/index.html
+++ b/index.html
@@ -336,4 +336,8 @@
 <!--CSS-3 HTML-->
 <link href="style.css" type="text/css" rel="stylesheet">
 
+<!--CSS-6 HTML-->
+<h1 class="title" >Top Vacation Spots</h1>
+
+
 
