--- a/index.html
+++ b/index.html
@@ -339,5 +339,9 @@
 <!--CSS-6 HTML-->
 <h1 class="title" >Top Vacation Spots</h1>
 
+<!--CSS-7 HTML-->
+<h1 id="article-title">Top Vacation Spots</h1>
+
+
 
 
