--- a/index.html
+++ b/index.html
@@ -342,6 +342,10 @@
 <!--CSS-7 HTML-->
 <h1 id="article-title">Top Vacation Spots</h1>
 
+<!--CSS-10 HTML-->
+<h1 class="cursive capitalize">Top Vacation Spots</h1>
+
+
 
 
 
