--- a/index.html
+++ b/index.html
@@ -345,7 +345,8 @@
 <!--CSS-10 HTML-->
 <h1 class="cursive capitalize">Top Vacation Spots</h1>
 
-
+<!--CSS-44 HTML-->
+<strong>Welcome</strong>
 
 
 
