--- a/index.html
+++ b/index.html
@@ -348,6 +348,11 @@
 <!--CSS-44 HTML-->
 <strong>Welcome</strong>
 
+<!--CSS- 45 HTML-->
+<footer>
+  <h3>"Thanks for taking our survey!"</h3>
+</footer>  
+
 
 
 
