--- a/index.html
+++ b/index.html
@@ -356,5 +356,8 @@
 <!--CSS 67 HTML-->
 <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,700">
 
+<!--CSS 70 HTML-->
+<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Work+Sans:400,500,800|Merriweather:400,400i" rel="stylesheet">
+
 
 
